--- a/DesignLayout/Resources/menu/main_menu.axml
+++ b/DesignLayout/Resources/menu/main_menu.axml
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+      xmlns:DesignLayout="http://schemas.android.com/apk/res-auto">
 	<!--	<item android:id="@+id/action_settings" android:title="settings" android:orderInCategory="100" app:showAsAction="never" />-->
+  <item android:id="@+id/action_search"
+        DesignLayout:showAsAction="always"
+       android:text="Search"
+       android:title="Search"
+        android:actionViewClass="Android.Support.V7.Widget.SearchView"
+       android:icon="@drawable/ic_search"/>
 </menu>
